<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Voice Calculator&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="app_name"></string>
    <string name="button_1">!</string>
    <string name="button_2">sin</string>
    <string name="button_3">^</string>
    <string name="button_4">pi</string>
    <string name="button_5">C</string>
    <string name="button_6">lg</string>
    <string name="button_7">sqrt</string>
    <string name="button_8">(</string>
    <string name="button_9">7</string>
    <string name="button_10">4</string>
    <string name="button_11">1</string>
    <string name="button_12">0</string>
    <string name="button_13">cos</string>
    <string name="button_14">)</string>
    <string name="button_15">8</string>
    <string name="button_16">5</string>
    <string name="button_17">2</string>
    <string name="button_18">.</string>
    <string name="button_19">tan</string>
    <string name="button_20">e</string>
    <string name="button_21">9</string>
    <string name="button_22">6</string>
    <string name="button_23">3</string>
    <string name="button_24">=</string>
    <string name="button_25">ln</string>
    <string name="button_26">AC</string>
    <string name="button_27">/</string>
    <string name="button_28">X</string>
    <string name="button_29">-</string>
    <string name="button_30">+</string>

</resources>
